crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_binder_in_assume.rs
fn main() {
    //@ assume ?x == 3i32;
}
